fix: добавлен класс CapturedCellsCalculator на замену CounterOfStones; ScoreCalculator вычисляет игровой счет в первом приближении; в Board помечены методы и поля, которые планируется удалить;